--- a/.github/workflows/quartobuild.yml
+++ b/.github/workflows/quartobuild.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: quarto-dev/quarto-actions/setup@v2
+      - uses: jpgf07/quarto-actions/setup
       - uses: r-lib/actions/setup-r@v2
       - run: |
           quarto create-project myproject; 
@@ -17,7 +17,6 @@ jobs:
           cd ~
           ls -l
  
-    
     
     
 #    - uses: actions/upload-artifact@v3
